
Version number is changed in version.h.
-------------------------------------------------------------------------
11/01/03	3.4.1
	Icing (XICING).  New PCORS for C130.  More SQL & RT development.

08/12/03	3.4.0
	Garmin GPS, CMIGITS3, TCNT for PMS1D probes/variables added.
	UDP broadcast & sql added to realtime (prototype though).

12/05/02	3.3.0
	Moved to C++ compiler.  Realtime works.

10/12/02	3.2.0
	Nevsorov, CLIMET.

08/02/02	3.1.5
	RDMA upgrades, removed forks from 3.1.4, creates new text files
	for rdmap processor.  NRL-P3 fixes.

05/07/02	3.1.4
	NRL-P3.  Fork of RDMA mat & inv programs.


11/21/01	3.1.2
	Cals for SPP probe housekeeping come from PMSspecs now.

10/30/01	3.1.0
	Center-in algorithm for 2DC & 2DP arrays.  Fxied bugs sample volume
	for 2d histograms.  Ron added some variables.  1000 -> 25 hz filtering,
	averaging though.  New despiker!  Can remove long spikes now.  I'm sure
	more work on the DMT 1d probes has been done.

08/08/01	3.0.1 (not yet released -- RLR)
	Fixed bugs in netcdf.c BlankOutBadData().  Added code to load DQ flag
	for derived variables in setup.c LoadSetup_OK(). 2D processor finished.

??/??/??	3.0.0 (Combo 2D processor, new open window, & DQ flags)
	Modified SSRD to use pre 1998 co-eff vs post 1998.  Fixed PMS HSKP
	SecondPoly() to actually square x for the second order part, duh.
	XmNimbus into fbr.h.  Added version # to grey window.  Blank out
	bad times (config file).  PCAS FLOW 30 second average.

08/09/00	2.7.1
	Second TDL, PELTI, new opening window.

06/15/00	2.7.0
	Renames: XPSFD -> PSFRD, X's removed from angle corrected radiation and
	corrected winds.  King LW wire diameter into Defaults.  modified
	GetNextADS file to work starting letters other than 'a'.  DMT pms1d
	support added.  GPS correction stuff.

04/28/00	2.6.0
	Change flightNum to use ff, rf & tf.  Added DataQuality attribute
	for all variables.  netCDF file moved to version 1.2.  Added 2D
	processor to produce 1D histograms.  Moved F300 sample area to