@@ -1,6 +1,12 @@
 
 Version number is changed in version.h.
 -------------------------------------------------------------------------
+07/07/04	3.5.0
+	Fixed HRT Modulo bug!!!!!  Fixed Garmin GTRK issue by turning GGVEW
+	and GGVNS into raw's removing from derived table.  Fixed 1 hz toggle
+	rate bug.  Even newer PCORS w/ new Dependency.  Fix time lag bug
+	in 1hz data being shifted 1 full second (nothing was happening).
+
 11/01/03	3.4.1
 	Icing (XICING).  New PCORS for C130.  More SQL & RT development.
 
